--- a/ud2/ejemplo_cabecera.html
+++ b/ud2/ejemplo_cabecera.html
@@ -3,20 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ejemplo cabecera</title>
+    <title>Ejemplo cabecera</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f5f7fa;
+            line-height: 1.6;
+            color: #2d3748;
+        }
+
+        h1 {
+            text-align: center;
+            color: #2c5282;
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            padding-bottom: 10px;
+            border-bottom: 3px solid #4299e1;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+        }
+
+        h2 {
+            color: #2b6cb0;
+            font-size: 1.8em;
+            margin: 25px 0;
+            padding-left: 15px;
+            border-left: 4px solid #4299e1;
+        }
+
+        hr {
+            border: none;
+            height: 3px;
+            background: linear-gradient(to right, #4299e1, #63b3ed, #4299e1);
+            margin: 30px 0;
+        }
+
+        hr:last-of-type {
+            height: 10px;
+            background: linear-gradient(to right, #2c5282, #4299e1, #2c5282);
+            border-radius: 5px;
+        }
+
+        p {
+            background-color: white;
+            padding: 15px;
+            margin: 15px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease;
+        }
+
+        p:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+
+        p[align="center"] {
+            text-align: center;
+            background-color: #ebf8ff;
+            border-left: 4px solid #4299e1;
+        }
+
+        pre {
+            background-color: #2d3748;
+            color: #e2e8f0;
+            padding: 20px;
+            border-radius: 8px;
+            font-family: 'Courier New', Courier, monospace;
+            white-space: pre-wrap;
+            margin: 20px 0;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        /* Estilo para líneas de texto sueltas */
+        body > :not(h1):not(h2):not(p):not(pre):not(hr) {
+            padding: 10px;
+            background-color: white;
+            margin: 10px 0;
+            border-radius: 5px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+        }
+
+        /* Diseño responsive */
+        @media (max-width: 600px) {
+            body {
+                padding: 15px;
+            }
+
+            h1 {
+                font-size: 2em;
+            }
+
+            h2 {
+                font-size: 1.5em;
+            }
+
+            pre {
+                padding: 15px;
+                font-size: 0.9em;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1 align="center">Cabecera 1 centrada</h1>
-    <h2 align="1eft">Cabecera 2 a Ia izquierda</h2>
+    <h1>Cabecera 1 centrada</h1>
+    <h2>Cabecera 2 a la izquierda</h2>
     <hr>
-    <p>Este es el primer parrafo. </p>
-    <p align="center">Este parrafo esta centrado.</p>
-    Esta es la tercera linea. La cuarta se junta con la
+    <p>Este es el primer párrafo.</p>
+    <p align="center">Este párrafo está centrado.</p>
+    Esta es la tercera línea. La cuarta se junta con la
     tercera<br>
-    Esta es la cuarta linea.
-    <pre> Este texto aparece tal como
+    Esta es la cuarta línea.
+    <pre>Este texto aparece tal como
     lo he escrito, preformateado.
     </pre>
-    <hr size=lO>
+    <hr>
 </body>
 </html>
