--- a/ud2/curriculum.html
+++ b/ud2/curriculum.html
@@ -133,7 +133,7 @@
 <body>
     <div class="cv-container">
         <div class="lateral">
-            <img src="./foto.jpg" alt="Foto de perfil" class="foto">
+            <img src="./img/foto.jpg" alt="Foto de perfil" class="foto">
             
             <div class="contacto-info">
                 <h2 class="seccion-titulo">Contacto</h2>
