--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <h3>Tema2: HTML</h3>
     <p>Ejercicio1: <a href="./ud2/lista_de_asignaturas.html">lista_de_asignaturas</a></p>
     <p>Ejercicio2: <a href="./ud2/horario_clase.html">horario_clase</a></p>
-    <p>Curriculum: <a href="./ud2/curriculum.html">Curriculum</a></p>
+    <p>Curriculum<a href="./ud2/curriculum.html">Curriculum</a></p>
 
     <div class="iframe-container">
         <div class="iframe-title">Wikipedia</div>
